changed quarkus demo