@@ -20,14 +20,11 @@
  */
 package com.inrupt.client.demo.quarkus;
 
-import static org.apache.jena.rdf.model.ResourceFactory.createResource;
-import static org.apache.jena.vocabulary.RDF.type;
-
 import com.inrupt.client.Client;
 import com.inrupt.client.ClientProvider;
 import com.inrupt.client.Request;
-import com.inrupt.client.jena.JenaBodyHandlers;
 import com.inrupt.client.openid.OpenIdSession;
+import com.inrupt.client.solid.SolidResourceHandlers;
 import com.inrupt.client.vocabulary.LDP;
 import com.inrupt.client.webid.WebIdBodyHandlers;
 import com.inrupt.client.webid.WebIdProfile;
@@ -37,6 +34,7 @@ import io.quarkus.qute.TemplateInstance;
 
 import java.net.URI;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
@@ -74,21 +72,13 @@ public class SolidResource {
             final var profile = session.send(req, WebIdBodyHandlers.ofWebIdProfile(webid)).body();
 
             return profile.getStorage().stream().findFirst().map(storage -> Request.newBuilder(storage).build())
-                .map(request -> session.send(request, JenaBodyHandlers.ofModel()).body())
+                .map(request -> session.send(request, SolidResourceHandlers.ofSolidContainer()).body())
                 .map(model -> {
-                    final var containers = model
-                        .listSubjectsWithProperty(type, createResource(LDP.BasicContainer.toString()))
-                        .filterKeep(s -> s.isURIResource())
-                        .mapWith(s -> s.getURI())
-                        .toList();
+                    final var resources = model.getContainedResources()
+                        .collect(Collectors.groupingBy(c -> c.getType().contains(LDP.BasicContainer),
+                                    Collectors.mapping(c -> c.getId().toString(), Collectors.toList())));
 
-                    final var resources = model
-                        .listSubjectsWithProperty(type, createResource(LDP.RDFSource.toString()))
-                        .filterKeep(s -> s.isURIResource())
-                        .mapWith(s -> s.getURI())
-                        .toList();
-
-                    return Templates.profile(profile, containers, resources);
+                    return Templates.profile(null, resources.get(true), resources.get(true));
                 });
         }).orElseGet(() -> Templates.profile(null, List.of(), List.of()));
     }
